Add annotations. Migrate to Kotlin DSL. Fix invokespecial resolution